Hyperparameters Tunning with grid search cv

--- a/Machine Learning/grid_search_cv.ipynb
+++ b/Machine Learning/grid_search_cv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +121,7 @@
     "# Linear Regression\n",
     "import pandas as pd \n",
     "import seaborn as sns\n",
+    "import numpy as np \n",
     "df = sns.load_dataset('titanic')\n",
     "df['age'] = df['age'].fillna(df['age'].mean())\n",
     "x = df[['age']]\n",
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,99 @@
     "\n",
     "# define parameter grid\n",
     "\n",
-    "param_grid = {'n_neighbors': [5,7,13,19,25,30],'weights':['uniform', 'distance']}\n",
+    "param_grid = {'n_neighbors': np.arange(1,30,2),'weights':['uniform', 'distance']}\n",
+    "\n",
+    "# object grid search cv (creating the model)\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='f1')\n",
+    "\n",
+    "# train the model\n",
+    "grid_search.fit(x,y)\n",
+    "\n",
+    "# print the best parameters\n",
+    "print(\"Best Parameters :\" , grid_search.best_params_)\n",
+    "print(\"Best Score :\" , grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters : {'max_depth': 5, 'min_samples_split': 2}\n",
+      "Best Score : 0.7414670121356333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DTC Decision Tree Classifier\n",
+    "import pandas as pd \n",
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('titanic')\n",
+    "df['age'] = df['age'].fillna(df['age'].mean())\n",
+    "x = df[['pclass','sex','age','sibsp','parch','fare']]\n",
+    "y = df['survived']\n",
+    "x = pd.get_dummies(x,columns=['sex'])\n",
+    "\n",
+    "from sklearn.tree import  DecisionTreeClassifier\n",
+    "from sklearn.model_selection import  GridSearchCV\n",
+    "\n",
+    "# create a model \n",
+    "model = DecisionTreeClassifier()\n",
+    "\n",
+    "# define parameter grid\n",
+    "\n",
+    "param_grid = {'max_depth': [3,5,7, None], 'min_samples_split':[2,3,4]}\n",
+    "\n",
+    "# object grid search cv (creating the model)\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='f1')\n",
+    "\n",
+    "# train the model\n",
+    "grid_search.fit(x,y)\n",
+    "\n",
+    "# print the best parameters\n",
+    "print(\"Best Parameters :\" , grid_search.best_params_)\n",
+    "print(\"Best Score :\" , grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters : {'max_depth': None, 'min_samples_split': 3, 'n_estimators': 100}\n",
+      "Best Score : 0.7658416974706755\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random forest classifier\n",
+    "import pandas as pd \n",
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('titanic')\n",
+    "df['age'] = df['age'].fillna(df['age'].mean())\n",
+    "x = df[['pclass','sex','age','sibsp','parch','fare']]\n",
+    "y = df['survived']\n",
+    "x = pd.get_dummies(x,columns=['sex'])\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import  GridSearchCV\n",
+    "\n",
+    "# create a model \n",
+    "model = RandomForestClassifier()\n",
+    "\n",
+    "# define parameter grid\n",
+    "\n",
+    "param_grid = {  'n_estimators':[10,50,100],\n",
+    "                'max_depth':[3,5,7,None],\n",
+    "                'min_samples_split':[2,3,4]}\n",
     "\n",
     "# object grid search cv (creating the model)\n",
     "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='f1')\n",
