--- a/Machine Learning/regression.ipynb
+++ b/Machine Learning/regression.ipynb
@@ -13,20 +13,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\afzaa\\anaconda3\\lib\\site-packages (1.3.0)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\afzaa\\anaconda3\\lib\\site-packages (from scikit-learn) (1.24.3)\n",
-      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\afzaa\\anaconda3\\lib\\site-packages (from scikit-learn) (1.11.1)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\afzaa\\anaconda3\\lib\\site-packages (from scikit-learn) (1.2.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\afzaa\\anaconda3\\lib\\site-packages (from scikit-learn) (2.2.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (727830033.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    pip install scikit-learn\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "# install scikit learn\n",
     "pip install scikit-learn"
    ]
   },
@@ -207,6 +202,7 @@
     }
    ],
    "source": [
+    "#  load dataset\n",
     "df = sns.load_dataset('titanic')\n",
     "df.head()"
    ]
