--- a/Machine Learning/regression.ipynb
+++ b/Machine Learning/regression.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
     }
    ],
    "source": [
-    "# model calling\n",
+    "# model calling (Linear Regression)\n",
     "model = LinearRegression()\n",
     "\n",
     "# train the model\n",
