--- a/Machine Learning/best_model.ipynb
+++ b/Machine Learning/best_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Best Model Selection"
+    "# Best Model Selection for machine learning"
    ]
   },
   {
