--- a/Machine Learning/regression.ipynb
+++ b/Machine Learning/regression.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression in Scikit Learn\n"
+    "# Regression in Scikit Learn\n",
+    "## Machine Learning\n"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
